monticore-generator/src/test/resources/cocos/invalid/A4032/A4032.mc4
package cocos.invalid.A4032;

grammar A4032 {

 enum A = "a";

 ast A;

}